Ajout d'une image

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Exercice html 4</title>
   </head>
   <body>
-    <h1>tout les petits truc qui me seront utile par la suite</h1>
-    <p>Le site de code academy est ici.</p>
+    <h1>
+      <img src="http://www.infowebmaster.fr/img/petite-image/bloc-note-stylo.png">
+      tout les petits truc qui me seront utile par la suite</h1>
+    <p>Le site de code academy est <a href="https://openclassrooms.com/">ici.</p>
     <p>Pour plein de tuto sympa, il y a aussi openclassroom. </p>
     <p>si je veux devenir un crakc sur ubuntu il me faut la bonne adresse.</p>
   </body>
