ajout du lien de openclassroom et de code academy

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <h1>
       <img src="http://www.infowebmaster.fr/img/petite-image/bloc-note-stylo.png">
       tout les petits truc qui me seront utile par la suite</h1>
-    <p>Le site de code academy est <a href="https://openclassrooms.com/">ici.</p>
-    <p>Pour plein de tuto sympa, il y a aussi openclassroom. </p>
-    <p>si je veux devenir un crakc sur ubuntu il me faut la bonne adresse.</p>
+    <p>Le site de code academy est <a href="https://www.codecademy.com/"> ici </a>.</p>
+    <p>Pour plein de tuto sympa, il y a aussi <a href="https://openclassrooms.com/"> openclassroom </a>. </p>
+    <p>si je veux devenir un crack sur ubuntu il me faut la bonne adresse.</p>
   </body>
 </html>
