--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <h1>
-      <img src="http://www.infowebmaster.fr/img/petite-image/bloc-note-stylo.png">
+      <img src="http://www.infowebmaster.fr/img/petite-image/bloc-note-stylo.png"
+      alt="Un petit bloc note" title="Bloc note">
       tout les petits truc qui me seront utile par la suite</h1>
     <p>Le site de code academy est <a href="https://www.codecademy.com/"> ici </a>.</p>
     <p>Pour plein de tuto sympa, il y a aussi <a href="https://openclassrooms.com/"> openclassroom </a>. </p>
